--- a/compose/build.gradle
+++ b/compose/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.2.0-rc02'
+        compose_version = '1.3.0-alpha01'
         accompanist_version = '0.24.11-rc'
     }
 }
@@ -44,7 +44,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha13'
+    implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
     implementation "androidx.compose.ui:ui:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
