support: workflows: fix empty repo name in workflow dispatch commit message
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/.github/workflows/build_library_dispatch.yml
+++ b/.github/workflows/build_library_dispatch.yml
@@ -80,5 +80,5 @@ jobs:
             echo "Dispatching to $repo"
             curl -X POST -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.API_TOKEN_GITHUB }}" \
               https://api.github.com/repos/Flamingo-OS/packages_apps_$repo/actions/workflows/build_apk.yml/dispatches \
-              -d '{"ref":"A12.1","inputs":{"message":"Updating $repo APK following support library update ${{ env.GIT_LINK }}"}}'
+              -d '{"ref":"A12.1","inputs":{"message":"Updating '"$repo"' APK following support library update ${{ env.GIT_LINK }}"}}'
           done
