--- a/compose/build.gradle
+++ b/compose/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-alpha03'
+        compose_version = '1.3.0-beta01'
     }
 }
 
 plugins {
-    id 'com.android.library' version '7.4.0-alpha09'
+    id 'com.android.library' version '7.4.0-alpha10'
     id 'org.jetbrains.kotlin.android' version '1.7.0'
 }
 
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha16'
+    implementation 'androidx.compose.material3:material3:1.0.0-beta01'
     implementation "androidx.compose.ui:ui:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
